[BDN-748] Add resources permissions OpenAPI spec
